fix: 表記の修正と設定の追記 #16

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -8,6 +8,6 @@ ja:
       email: メールアドレス
       password: パスワード
   header:
-    login: ログイン
-    logout: ログアウト
+    sign_in: ログイン
+    sign_out: ログアウト
     to_register_page: 新規登録
