--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -19,6 +19,7 @@ ja:
         product: インク
         paper: 使用した紙
         pen: 使用したペン
+        images: 画像
       product:
         name: インクの名前
         brand_name: メーカー名
@@ -27,4 +28,14 @@ ja:
         review:
           attributes:
             product:
-              required: "は「インクを選択」から選んでください。"
+              required: "は「インクを選択」から選んでください"
+            images:
+              limit_max_exceeded:
+                other: は4枚まで投稿できます
+              content_type_invalid:
+                one: はjpg形式とpng形式のみ投稿できます
+                other: はjpg形式とpng形式のみ投稿できます
+              content_type_spoofed:
+                one: はjpg形式とpng形式のみ投稿できます
+                other: はjpg形式とpng形式のみ投稿できます
+              total_file_size_not_less_than: は3MBまで投稿できます
