improve: i18n対応（やり忘れてたところも一緒に）

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -22,6 +22,7 @@ ja:
         body: 本文
         product_name: インク
         product: インク
+        ink_recipes: インクレシピ
         paper: 使用した紙
         pen: 使用したペン
         images: 画像
