--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -38,6 +38,7 @@ ja:
     notification: 通知
   footer:
     contact: お問い合わせ
+    privacy_policy: プライバシーポリシー
     admin: 管理
   home:
     see_review: レビューを見る
