--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -39,6 +39,7 @@ ja:
   footer:
     contact: お問い合わせ
     privacy_policy: プライバシーポリシー
+    term: 利用規約
     admin: 管理
   home:
     see_review: レビューを見る
