--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -40,6 +40,7 @@ ja:
     contact: お問い合わせ
     privacy_policy: プライバシーポリシー
     term: 利用規約
+    guide: iroGraphicaについて
     admin: 管理
   home:
     see_review: レビューを見る
