add: I18n対応（追加） #119

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -71,6 +71,7 @@ ja:
       youtube_account_url: http://youtube.com/@sample
     setting:
       title: 設定変更
+      notice: 設定を変更しました
   reviews:
     form:
       select_product: インクを選択
